22-10-2025/currency-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-service
spec:
  selector:
    app: currency-app
  ports:
    - protocol: TCP
      port: 80       # external
      targetPort: 5000  # matches container EXPOSE 5000
  type: LoadBalancer
